--- a/url-shortener/src/main/resources/application.properties
+++ b/url-shortener/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=url-shortener
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=${DATABASE_DIALECT}
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=172800000
