--- a/url-shortener/src/main/resources/application.properties
+++ b/url-shortener/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.dialect=${DATABASE_DIALECT}
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=172800000
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.url.shortener=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web.servlet=TRACE
+
+frontend.url=${FRONTEND_URL}
