--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
     "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
     "chartjs": "^0.3.24",
+    "dayjs": "^1.11.13",
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.3"
   },
