--- a/url-shortener-frontend/.env
+++ b/url-shortener-frontend/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=https://url-shortener-sb.onrender.com
+VITE_BACKEND_URL=http://localhost:8080
 VITE_REACT_FRONT_END_URL=http://localhost:5173
 VITE_REACT_SUBDOMAIN=http://url.localhost:5173
 
