--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-shortener-frontend",
+  "name": "url-shortener-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,36 +12,35 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.2",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
-    "chartjs": "^0.3.24",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
-    "motion": "^12.0.6",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
 }
